# lsm6dsv80x-rs

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
bsp/: Cargo.toml  README.md  build.rs
bsp/src/: board_macro.rs  main.rs
bsp/src/examples/: fifo_irq.rs  fsm_fourd.rs  fsm_glance.rs  hg_wakeup.rs  mlc_gym.rs  read_irq.rs  read_polling.rs
examples/fsm_fourd_stm32f401re/: Cargo.toml  README.md  build.rs
examples/fsm_fourd_stm32f401re/src/: main.rs
examples/fsm_fourd_stm32f401re_embassy/: Cargo.toml  README.md  build.rs
examples/fsm_fourd_stm32f401re_embassy/src/: config.rs  main.rs
examples/fsm_glance_stm32f401re/: Cargo.toml  README.md  build.rs
examples/fsm_glance_stm32f401re/src/: config.rs  main.rs
examples/fsm_glance_stm32f401re_embassy/: Cargo.toml  README.md  build.rs
examples/fsm_glance_stm32f401re_embassy/src/: config.rs  main.rs
examples/hg_wakeup_stm32f401re/: Cargo.toml  README.md
examples/hg_wakeup_stm32f401re/src/: main.rs
examples/hg_wakeup_stm32f401re_embassy/: Cargo.toml  README.md
examples/hg_wakeup_stm32f401re_embassy/src/: main.rs
examples/mlc_gym_stm32f401re/: Cargo.toml  README.md  build.rs
examples/mlc_gym_stm32f401re/src/: config.rs  main.rs
examples/mlc_gym_stm32f401re_embassy/: Cargo.toml  README.md  build.rs
examples/mlc_gym_stm32f401re_embassy/src/: config.rs  main.rs
examples/read_data_irq_stm32f401re/: Cargo.toml  README.md
examples/read_data_irq_stm32f401re/src/: main.rs
examples/read_data_irq_stm32f401re_embassy/: Cargo.toml  README.md
examples/read_data_irq_stm32f401re_embassy/src/: main.rs
examples/read_data_polling_stm32f401re/: Cargo.toml  README.md
examples/read_data_polling_stm32f401re/src/: main.rs
examples/read_data_polling_stm32f401re_embassy/: Cargo.toml  README.md
examples/read_data_polling_stm32f401re_embassy/src/: main.rs
examples/read_fifo_stm32f401re/: Cargo.toml  README.md
examples/read_fifo_stm32f401re/src/: main.rs
examples/read_fifo_stm32f401re_embassy/: Cargo.toml  README.md
examples/read_fifo_stm32f401re_embassy/src/: main.rs
src/: driver.rs  lib.rs  prelude.rs
src/register/: advanced.rs  embedded.rs  main.rs  mod.rs  sensor_hub.rs
